# sousflow

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.idx/: dev.nix
include/: sousflow.h
src/: sousflow.cpp  utility.hpp
test/: sample.yml  task.cpp  test_parser.cpp
